Fix page top overlap issue

--- a/static/style.css
+++ b/static/style.css
@@ -310,6 +310,7 @@ a:hover {
 
 .middle-container{
     margin: 0;
+    margin-top: 70px;
     height: 50vh;
     display: flex;
     justify-content: center;
